--- a/simple/src/app/new-topic-dialog/new-topic-dialog.component.html
+++ b/simple/src/app/new-topic-dialog/new-topic-dialog.component.html
@@ -8,6 +8,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-	<button class="mat-button" (click)="close()">Cancel</button>
-	<button class="mat-button" (click)="createTopic()">Create Topic</button>
+	<button class="mat-button lectio-theme lectio-view" (click)="close()">Cancel</button>
+	<button class="mat-button lectio-theme lectio-view" (click)="createTopic()">Create Topic</button>
 </mat-dialog-actions>
