--- a/simple/src/app/notebook-lessons/notebook-lessons.component.html
+++ b/simple/src/app/notebook-lessons/notebook-lessons.component.html
@@ -1,15 +1,18 @@
-<div *ngIf="notebook">
-	<div class="notebook-topbar notebook-theme lectio-theme">
-		<div class="notebook-header notebook-theme lectio-theme" fxLayout="row">
-			<div class="notebook-title notebook-theme" *ngIf="notebook" fxFlex>{{notebook.name}}</div>
+<div class="notebook-lesson" *ngIf="notebook">
+	<div class="notebook-topbar notebook-theme lectio-theme lectio-view">
+		<div class="notebook-header notebook-theme lectio-theme lectio-view" fxLayout="row">
+			<div class="notebook-title notebook-theme lectio-theme lectio-view" *ngIf="notebook" fxFlex>{{notebook.name}}</div>
 			<button mat-icon-button *ngIf="role == 'teacher'" fxFlex="8" matToolTip="New Topic" (click)="newTopicClicked(undefined)">
 				<mat-icon class="material-icons" >add_box</mat-icon>
 			</button>
 		
 		</div>
 	</div>
-	<div class="topic-card" *ngFor="let topic of topicList"> 
-			<app-topic-lesson [topic]="topic" [role]="role" [parentView]="this"></app-topic-lesson>
+	<div 
+		class="topic-card notebook-theme lectio-theme lectio-view" 
+		
+		> 
+			<app-topic-lesson *ngFor="let topic of topicList" [topic]="topic" [role]="role" [parentView]="this"></app-topic-lesson>
 	</div>
 </div>
 
