--- a/simple/src/app/topic-history/topic-history.component.html
+++ b/simple/src/app/topic-history/topic-history.component.html
@@ -1,26 +1,26 @@
 <div class="topic-history" fxLayout="column" fxLayoutAlign=" stretch">
 	<div class="notebook-topbar notebook-theme lectio-theme">
-		<div class="topic-history-header lectio-theme notebook-theme" *ngIf="topic" fxLayout="row" fxLayoutAlign=" center">
-			<button mat-icon-button class="lectio-theme notebook-theme" (click)="clickBack();">
-				<mat-icon class="material-icons lectio-theme notebook-theme" >arrow_back</mat-icon>
+		<div class="topic-history-header lectio-theme notebook-theme lectio-view" *ngIf="topic" fxLayout="row" fxLayoutAlign=" center">
+			<button mat-icon-button class="lectio-theme notebook-theme lectio-view" (click)="clickBack();">
+				<mat-icon class="material-icons lectio-theme notebook-theme lectio-view" >arrow_back</mat-icon>
 			</button>
-			<div class="notebook-header notebook-theme lectio-theme" fxLayout="row">
-				<div class="notebook-title notebook-theme" *ngIf="notebook" fxFlex>{{notebook.name}}</div>
+			<div class="notebook-header notebook-theme lectio-theme lectio-view" fxLayout="row">
+				<div class="notebook-title notebook-theme lectio-theme lectio-view" *ngIf="notebook" fxFlex>{{notebook.name}}</div>
 			</div>
 			<div class="topicname" fxFlex >{{topic.name}}</div>
 		</div>
 	</div>
-	<div class="lessonlist" fxLayout="column" fxLayoutAlign=" stretch">
-		<mat-card class="lessonbox" *ngFor="let lesson of lessonList" fxLayout="column">
-			<div  class="lessondate lectio-theme notebook-theme" *ngIf="lesson.date" fxFlex>
+	<div class="lessonlist notebook-theme lectio-theme lectio-view" >
+		<mat-card class="lessonbox notebook-theme lectio-theme lectio-view" *ngFor="let lesson of lessonList" fxLayout="column">
+			<div  class="lessondate lectio-theme notebook-theme lectio-view" *ngIf="lesson.date" fxFlex>
 				<span>{{lesson.date | arrayToDate | date}} </span>
 			</div>
-			<div class="lessoncontent lectio-theme notebook-theme"
+			<div class="lessoncontent lectio-theme notebook-theme lectio-view"
 				[innerHTML]="lesson.content" fxFlexAlign="baseline">
 			</div>
 		</mat-card>
 	</div>
-	<div class="loadButtonContainer lectio-theme notebook-theme" *ngIf="hasMoreLessons" fxLayout="column" fxLayoutAlign=" center">
-		<button mat-button class="lectio-theme notebook-theme" (click)="loadMoreLessons();">Load more lessons...</button>
+	<div class="loadButtonContainer lectio-theme notebook-theme lectio-view" *ngIf="hasMoreLessons" fxLayout="column" fxLayoutAlign=" center">
+		<button mat-button class="lectio-theme notebook-theme lectio-view" (click)="loadMoreLessons();">Load more lessons...</button>
 	</div>
 </div>
