--- a/simple/src/app/topic-history/topic-history.component.css
+++ b/simple/src/app/topic-history/topic-history.component.css
@@ -74,7 +74,7 @@ div.lessondate {
 div.lessoncontent {
 	margin-top: 0px;
 	padding-top: 0px;
-	font-size: large;
+	font-size: medium;
 	line-height: 1.5;
 }
 
