Handle case when user puts in link to topic history

--- a/simple/src/app/notebook-lessons/notebook-lessons.component.html
+++ b/simple/src/app/notebook-lessons/notebook-lessons.component.html
@@ -9,9 +9,7 @@
 		</div>
 	</div>
 	<div 
-		class="topic-card notebook-theme lectio-theme lectio-view" 
-		
-		> 
+		class="topic-card notebook-theme lectio-theme lectio-view" > 
 			<app-topic-lesson *ngFor="let topic of topicList" [topic]="topic" [role]="role" [parentView]="this"></app-topic-lesson>
 	</div>
 </div>
